--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
     </head>
     <body>
         <header class="header">
-            Some text....
+            <div class="header__logo-box">
+                <img src="img/logo-white.png" alt="Cool image" class="header__logo">
+            </div>
+            <div class="header__text-box">
+                <h1 class="heading-primary">
+                    <span class="heading-primary--main">Outdoors</span>
+                    <span class="heading-primary--sub">is where life happens</span>
+                </h1>
+                <a href="#" class="btn btn--white">Discorver our toors</a>
+            </div>
         </header>
-        
     </body>
 </html>
