--- a/index.html
+++ b/index.html
@@ -60,7 +60,46 @@
                 </div>
             </section> 
         </main>
-
+        <section class="section-features">
+            <div class="row">
+                <div class="col-1-of-4"> 
+                    <div class="listcard">
+                        <i class="listcard__icon icon-basic-world"></i>
+                        <h3 class="listcard__header heading-tertiary">Explore the world</h3>
+                        <p class="listcard__paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4"> 
+                    <div class="listcard">
+                        <i class="listcard__icon icon-basic-compass"></i>
+                        <h3 class="listcard__header heading-tertiary">Meet nature</h3>
+                        <p class="listcard__paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4"> 
+                    <div class="listcard">
+                        <i class="listcard__icon icon-basic-map"></i>
+                        <h3 class="listcard__header heading-tertiary">Find your way</h3>
+                        <p class="listcard__paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4"> 
+                    <div class="listcard">
+                        <i class="listcard__icon icon-basic-heart"></i>
+                        <h3 class="listcard__header heading-tertiary">Live a healthier life</h3>
+                        <p class="listcard__paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Testing grid -->
         <!-- <section class="grid-test">
             <div class="row">
