"Most popular tours" section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 </div>
             </section> 
         </main>
+        
         <section class="section-features">
             <div class="row">
                 <div class="col-1-of-4"> 
@@ -98,6 +99,108 @@
                         </p>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="section-tours u-margin-top-big">
+            <div class="u-centered-text u-margin-bottom-big">
+                <h2 class="heading-secondary"> 
+                    Most popular tours
+                </h2>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__img card__img--1">
+                                <h3 class="card__header"> 
+                                    <span>
+                                        The Sea explorer
+                                    </span>
+                                </h3>
+                            </div>
+                            <div class="card__details">
+                                <ul>
+                                    <li>3 day tours</li>
+                                    <li>Up to 30 people</li>
+                                    <li>2 tour guides</li>
+                                    <li>Sleep in cozy hotels</li>
+                                    <li>Difficulty: easy</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1 u-centered-text">
+                            <div class="card__price">
+                                <p class="card__price-only">Only</p>
+                                <p class="card__price-value">$287</p>
+                            </div>
+                            <a href="#" class="btn btn--white">Book now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__img card__img--2">
+                                <!-- TODO: Needs to be moved outside the img div -->
+                                <!--    because text should not be cropped with polygon -->
+                                <h3 class="card__header">
+                                    <span>
+                                        The forest hiker
+                                    </span>
+                                </h3>
+                            </div>
+                            <div class="card__details">
+                                <ul>
+                                    <li>7 day tours</li>
+                                    <li>Up to 40 people</li>
+                                    <li>6 tour guides</li>
+                                    <li>Sleep in provided tents</li>
+                                    <li>Difficulty: medium</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-2 u-centered-text">
+                            <div class="card__price">
+                                <p class="card__price-only">Only</p>
+                                <p class="card__price-value">$497</p>
+                            </div>
+                            <a href="#" class="btn btn--white">Book now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__img card__img--3">
+                                <h3 class="card__header">
+                                    <span>
+                                        The snow adventurer
+                                    </span>
+                                </h3>
+                            </div>
+                            <div class="card__details">
+                                <ul>
+                                    <li>5 day tours</li>
+                                    <li>Up to 15 people</li>
+                                    <li>3 tour guides</li>
+                                    <li>Sleep in provided tents</li>
+                                    <li>Difficulty: hard</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="u-padding-top-big card__side card__side--back card__side--back-3 u-centered-text">
+                            <div class="card__price">
+                                <p class="card__price-only">Only</p>
+                                <p class="card__price-value">$997</p>
+                            </div>
+                            <a href="#" class="btn btn--white">Book now!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-tours__btn-wraper u-centered-text">
+                <a href="#" class="btn btn--green">Discorve all tours</a>
             </div>
         </section>
         <!-- Testing grid -->
