Added initial mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
                         <div class="card">
                             <div class="card__side card__side--front">
                                 <div class="card__img card__img--1">
-                                    <h3 class="card__header"> 
-                                        <span>
-                                            The Sea explorer
-                                        </span>
-                                    </h3>
                                 </div>
+                                <h3 class="card__header"> 
+                                    <span class="card__title--1">
+                                        The Sea explorer
+                                    </span>
+                                </h3>
                                 <div class="card__details">
                                     <ul>
                                         <li>3 day tours</li>
@@ -163,12 +163,12 @@
                                 <div class="card__img card__img--2">
                                     <!-- TODO: Needs to be moved outside the img div -->
                                     <!--    because text should not be cropped with polygon -->
-                                    <h3 class="card__header">
-                                        <span>
-                                            The forest hiker
-                                        </span>
-                                    </h3>
                                 </div>
+                                <h3 class="card__header"> 
+                                    <span class="card__title--2">
+                                        The forest hiker
+                                    </span>
+                                </h3>
                                 <div class="card__details">
                                     <ul>
                                         <li>7 day tours</li>
@@ -192,12 +192,12 @@
                         <div class="card">
                             <div class="card__side card__side--front">
                                 <div class="card__img card__img--3">
-                                    <h3 class="card__header">
-                                        <span>
-                                            The snow adventurer
-                                        </span>
-                                    </h3>
                                 </div>
+                                <h3 class="card__header card__header--3">
+                                    <span class="card__title--3">
+                                        The snow adventurer
+                                    </span>
+                                </h3>
                                 <div class="card__details">
                                     <ul>
                                         <li>5 day tours</li>
@@ -320,7 +320,7 @@
                                         </label>
                                     </div>
                                 </div>
-                                <div class="form__group">
+                                <div class="form__group form__btn-wrap">
                                     <button class="btn btn--green">Next step &rarr;</button>
                                 </div>
                             </form>
