--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="col-1-of-4"> 
                         <div class="listcard">
                             <i class="listcard__icon icon-basic-world"></i>
-                            <h3 class="listcard__header heading-tertiary">Explore the world</h3>
+                            <h3 class="listcard__header heading-tertiary">Explore</h3>
                             <p class="listcard__paragraph">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
                             </p>
@@ -127,7 +127,7 @@
                     <div class="col-1-of-4"> 
                         <div class="listcard">
                             <i class="listcard__icon icon-basic-heart"></i>
-                            <h3 class="listcard__header heading-tertiary">Live a healthier life</h3>
+                            <h3 class="listcard__header heading-tertiary">Live healthier</h3>
                             <p class="listcard__paragraph">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
                             </p>
