Fixed pop-up responsiveness

--- a/index.html
+++ b/index.html
@@ -393,13 +393,13 @@
         <div class="popup" id="popup">
             <div class="popup__content">
                 <a href="#section-tours" class="popup__close">&times;</a>
-                <div class="row popup__row">
-                    <div class="col-1-of-3 popup__img-wraper">
+                <div class="popup__row">
+                    <div class="popup__img-wraper">
                         <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
                         <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
                     </div>
 
-                    <div class="col-2-of-3 popup__text-wraper">
+                    <div class="popup__text-wraper">
                         <div class="popup__heading2-wraper">
                             <h2 class="heading-secondary"> 
                                 Start booking now
